[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prospector-energy-mcp"
version = "0.1.0"
description = "MCP server for Prospector Labs Energy Data API — interconnection queues, tax credits, developer intelligence, and deal sourcing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Prospector Labs" }]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prospector_energy"]

[project.scripts]
prospector-energy-mcp = "prospector_energy.server:main"
